# gb_learn_flask

./: Dockerfile  README.md  pyproject.toml  requirements.txt  wsgi.py
blog/: app.py  blog.sqlite  commands.py  config.py  extensions.py
blog/api/: article.py  user.py
blog/articles/: views.py
blog/auth/: auth.py  views.py
blog/authors/: views.py
blog/forms/: article.py
blog/index/: views.py
blog/models/: models.py
blog/templates/: base.html  index.html  navbar.html
blog/templates/articles/: create.html  details.html  list.html  tags.html
blog/templates/authors/: list.html
blog/templates/index/: index.html
blog/templates/users/: details.html  list.html  register.html
blog/user/: views.py
migrations/versions/: 4b489e77c65d_.py  dd0cd4f2e05f_create_user_schema.py
